--- a/src/app/main.css
+++ b/src/app/main.css
@@ -390,48 +390,30 @@ template {
 
 @layer base {
   :root {
-    --background: 0 0% 97.65%;
-    --foreground: 0 0% 12.55%;
-    --muted: 0 0% 93.73%;
-    --muted-foreground: 0 0% 39.22%;
-    --popover: 0 0% 98.82%;
-    --popover-foreground: 0 0% 12.55%;
-    --card: 0 0% 98.82%;
-    --card-foreground: 0 0% 12.55%;
-    --border: 0 0% 84.71%;
-    --input: 0 0% 94.12%;
-    --primary: 22.93 92.59% 52.35%;
-    --primary-foreground: 44 0% 100%;
-    --secondary: 34.05 100% 85.49%;
-    --secondary-foreground: 16.27 50.43% 22.94%;
-    --accent: 0 0% 90.98%;
-    --accent-foreground: 0 0% 12.55%;
-    --destructive: 10.16 77.87% 53.92%;
-    --destructive-foreground: 0 0% 100%;
-    --ring: 24.8 79.79% 63.14%;
+    --background: 0 0% 100%;
+    --foreground: 210 10.71% 10.98%;
+    --muted: 210 18.75% 93.73%;
+    --muted-foreground: 210 10.71% 10.98%;
+    --popover: 282 63% 99%;
+    --popover-foreground: 210 10.71% 10.98%;
+    --card: 282 63% 99%;
+    --card-foreground: 210 10.71% 10.98%;
+    --border: 207.27 9.91% 78.24%;
+    --input-border: 210 18.75% 93.73%;
+    --input-background: 210 28.57% 97.25%;
+    --input-background-active: 210 6% 39.22%;
+    --input-label: 210 6% 39.22%;
+    --input-label-active: 210 5% 54%;
+    --primary: 219.38 82.05% 54.12%;
+    --primary-foreground: 282 0% 100%;
+    --secondary: 153.21 69.42% 47.45%;
+    --secondary-foreground: 252 0% 100%;
+    --accent: 210 28.57% 97.25%;
+    --accent-foreground: 312 8% 99%;
+    --destructive: 11.03 97.38% 55.1%;
+    --destructive-foreground: 7 0% 100%;
+    --ring: 207.27 9.91% 78.24%;
     --radius: 0.5rem;
-  }
-
-  .dark {
-    --background: 0 0% 6.67%;
-    --foreground: 0 0% 93.33%;
-    --muted: 0 0% 13.33%;
-    --muted-foreground: 0 0% 70.59%;
-    --popover: 0 0% 9.8%;
-    --popover-foreground: 0 0% 93.33%;
-    --card: 0 0% 9.8%;
-    --card-foreground: 0 0% 93.33%;
-    --border: 44 14% 11%;
-    --input: 0 0% 28.24%;
-    --primary: 22.93 92.59% 52.35%;
-    --primary-foreground: 29.51 0% 100%;
-    --secondary: 28.5 64.52% 12.16%;
-    --secondary-foreground: 29.51 100% 88.04%;
-    --accent: 0 0% 16.47%;
-    --accent-foreground: 0 0% 93.33%;
-    --destructive: 10.16 77.87% 53.92%;
-    --destructive-foreground: 0 0% 100%;
-    --ring: 23.11 59.8% 40%;
   }
 }
 
