--- a/src/app/main.css
+++ b/src/app/main.css
@@ -1,35 +1,4 @@
 @tailwind base;
-
-@layer base {
-  h1 {
-    @apply text-h1;
-  }
-
-  h2 {
-    @apply text-h2;
-  }
-
-  h3 {
-    @apply text-h3;
-  }
-
-  h4 {
-    @apply text-h4;
-  }
-
-  h5 {
-    @apply text-h5;
-  }
-
-  h6 {
-    @apply text-h6;
-  }
-
-  a {
-    @apply text-blue-600 underline;
-  }
-}
-
 @tailwind components;
 @tailwind utilities;
 
@@ -409,7 +378,73 @@ template {
   display: none;
 }
 
+@font-face {
+  font-family: 'Graphik LCG';
+  src: url('./../shared/fonts/GraphikLCG-Light.eot');
+  src: local('Graphik LCG Regular Italic'), local('GraphikLCG-Light'),
+    url('./../shared/fonts/GraphikLCG-Light.eot?#iefix') format('embedded-opentype'),
+    url('./../shared/fonts/GraphikLCG-Light.woff2') format('woff2'),
+    url('./../shared/fonts/GraphikLCG-Light.woff') format('woff'),
+    url('./../shared/fonts/GraphikLCG-Light.ttf') format('truetype');
+  font-weight: 300;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: 'Graphik LCG';
+  src: url('./../shared/fonts/');
+  src: local('Graphik LCG Regular'), local('GraphikLCG-Regular'),
+    url('./../shared/fonts/GraphikLCG-Regular.eot?#iefix') format('embedded-opentype'),
+    url('./../shared/fonts/GraphikLCG-Regular.woff2') format('woff2'),
+    url('./../shared/fonts/GraphikLCG-Regular.woff') format('woff'),
+    url('./../shared/fonts/GraphikLCG-Regular.ttf') format('truetype');
+  font-weight: normal;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: 'Graphik LCG';
+  src: url('./../shared/fonts/GraphikLCG-Medium.eot');
+  src: local('Graphik LCG Medium'), local('GraphikLCG-Medium'),
+    url('./../shared/fonts/GraphikLCG-Medium.eot?#iefix') format('embedded-opentype'),
+    url('./../shared/fonts/GraphikLCG-Medium.woff2') format('woff2'),
+    url('./../shared/fonts/GraphikLCG-Medium.woff') format('woff'),
+    url('./../shared/fonts/GraphikLCG-Medium.ttf') format('truetype');
+  font-weight: 500;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: 'Graphik LCG';
+  src: url('./../shared/fonts/GraphikLCG-Semibold.eot');
+  src: local('Graphik LCG Semibold'), local('GraphikLCG-Semibold'),
+    url('./../shared/fonts/GraphikLCG-Semibold.eot?#iefix') format('embedded-opentype'),
+    url('./../shared/fonts/GraphikLCG-Semibold.woff2') format('woff2'),
+    url('./../shared/fonts/GraphikLCG-Semibold.woff') format('woff'),
+    url('./../shared/fonts/GraphikLCG-Semibold.ttf') format('truetype');
+  font-weight: 600;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: 'Graphik LCG';
+  src: url('./../shared/fonts/GraphikLCG-Bold.eot');
+  src: local('Graphik LCG Bold'), local('GraphikLCG-Bold'),
+    url('./../shared/fonts/GraphikLCG-Bold.eot?#iefix') format('embedded-opentype'),
+    url('./../shared/fonts/GraphikLCG-Bold.woff2') format('woff2'),
+    url('./../shared/fonts/GraphikLCG-Bold.woff') format('woff'),
+    url('./../shared/fonts/GraphikLCG-Bold.ttf') format('truetype');
+  font-weight: bold;
+  font-style: normal;
+}
+
 @layer base {
+
+  #root {
+    font-family: 'Graphik LCG', sans-serif;
+    @apply overflow-hidden
+  }
+
   :root {
     --background: 0 0% 100%;
     --foreground: 210 10.71% 10.98%;
@@ -439,6 +474,35 @@ template {
 }
 
 @layer base {
+
+  h1 {
+    @apply text-h1;
+  }
+
+  h2 {
+    @apply text-h2;
+  }
+
+  h3 {
+    @apply text-h3;
+  }
+
+  h4 {
+    @apply text-h4;
+  }
+
+  h5 {
+    @apply text-h5;
+  }
+
+  h6 {
+    @apply text-h6;
+  }
+
+  a {
+    @apply text-blue-600 underline;
+  }
+
   * {
     @apply border-border;
   }
